--- a/css/EstiloII.css
+++ b/css/EstiloII.css
@@ -5,9 +5,9 @@
 
 body{
     height: 100%;
-    background-color: black;
+    background-color: azure;
     background-size: cover;
-    color: aliceblue;
+    color: gray;
 }
 
 nav{
@@ -43,7 +43,24 @@ figure {
     width: 300px;
     height: 450px;
     padding: 5px;
-    margin: 2% 3%;
+    margin: 2% 5%;
+    position: relative;
+    display: inline-block;
+    align-items: center;
+    justify-content: center;
+}
+
+p{
+    display:  none;
+}
+
+figure:hover img{
+    opacity: 50%;
+}
+figure:hover p {
+        display: initial;
+        position: absolute;
+        padding: 3%;
 }
 
 @media screen and (max-width: 999px){
@@ -65,7 +82,7 @@ figure {
 .divm{
     width: 100%;
     height: 70%;
-    margin: 30% 0 0 0;
+    margin: 20% 0 0 0;
     background-color: aliceblue;
     color: black;
     font-size: large;
